# DeepHall

./: .gitignore  .pre-commit-config.yaml  CITATIONS.bib  NOTICE.txt  README.md  pyproject.toml
.github/workflows/: test.yml
DeepHall_n4l5_20250305_22:43:33/: config.yml
DeepHall_n4l5_20250306_22:00:26/: ckpt_000999.npz  config.yml  train_stats.csv
DeepHall_n4l5_20250306_22:01:10/: config.yml  train_stats.csv
DeepHall_n4l5_20250306_22:04:21/: ckpt_000536.npz  config.yml  train_stats.csv
DeepHall_n4l5_20250306_22:07:12/: config.yml
DeepHall_n4l5_20250306_22:12:12/: config.yml
DeepHall_n4l5_20250306_22:15:23/: config.yml
DeepHall_n4l5_20250306_22:15:34/: config.yml
DeepHall_n4l5_20250306_22:27:32/: config.yml
DeepHall_n4l5_20250306_22:29:23/: config.yml
DeepHall_n4l5_20250306_22:30:09/: ckpt_000999.npz  config.yml  train_stats.csv
DeepHall_n4l5_20250320_21:37:01/: config.yml
DeepHall_n4l5_20250320_21:42:38/: config.yml  train_stats.csv
DeepHall_n4l5_20250320_21:45:31/: config.yml  train_stats.csv
DeepHall_n4l5_20250320_21:49:48/: config.yml  train_stats.csv
DeepHall_n4l5_20250320_21:53:47/: config.yml
DeepHall_n4l5_20250320_21:54:05/: config.yml  train_stats.csv
DeepHall_n4l5_20250320_22:14:11/: config.yml
DeepHall_n4l5_20250320_22:14:28/: config.yml  train_stats.csv
DeepHall_n4l5_20250320_22:17:36/: config.yml  train_stats.csv
deephall/: __init__.py  config.py  constants.py  dmc_sample.py  hamiltonian.py  log.py  loss.py  mcmc.py  train.py  types.py
deephall/dmc/: dmc.py  drift_model.py  velocity_utils.py
deephall/netobs_bridge/: adaptor.py  cli_extend.py  hall_system.py
deephall/networks/: __init__.py  blocks.py  bosonic_network.py  laughlin.py  parton.py  pfaf_former.py  pfaffian.py  pfaffian.py.bak  pfafformer.py  psiformer.py
deephall/optimizers/: __init__.py  (+3 more)
hall/: pyvenv.cfg
tests/: cli_test.py  conftest.py  coord_test.py  dmc_test.py  hamiltonian_test.py  jax_test.py  pfaf_test.py  train_test.py
venv_hall/: pyvenv.cfg
visualization/: plot_train.py
(+23 files in other folders)
